objects/References__c.object
<CustomObject><fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Applied_Programme__c</fullName>
        <formula>Student_Programme__r.Programme__r.Programme_Version__r.Master_Link__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in the email to referees</inlineHelpText>
        <label>Applied Programme</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Can_Request_Reference_from_Referee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Request Reference from Referee?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>College_University_or_Employer__c</fullName>
        <label>College / University or Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_City__c</fullName>
        <description>Form Assembly City - SF Mailing City</description>
        <label>FA City</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_Country__c</fullName>
        <description>Form Assembly Country - SF Mailing Country</description>
        <label>FA Country</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_Email__c</fullName>
        <description>Form Assembly Email</description>
        <label>FA Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>FA_First_Name__c</fullName>
        <description>Form Assembly First Name - SF First Name</description>
        <label>FA First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_Position__c</fullName>
        <description>Form Assembly Position - SF Title</description>
        <label>FA Position</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_Postal_Code__c</fullName>
        <description>Form Assembly Postal Code - SF Mailing Zip/ Postal Code</description>
        <label>FA Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_State_Province__c</fullName>
        <description>Form Assembly State/Province - SF Mailing State/Province</description>
        <label>FA State/Province</label>
        <length>180</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_Street__c</fullName>
        <description>Form Assembly Street - SF Mailing Street</description>
        <label>FA Street</label>
        <length>180</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_Surname__c</fullName>
        <description>Form Assembly Surname - SF Last Name</description>
        <label>FA Surname</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_Telephone_Number__c</fullName>
        <description>Form Assembly Telephone Number - SF Business Phone</description>
        <label>FA Telephone Number</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>FA_Title__c</fullName>
        <description>Form Assembly Title - SF Salutation</description>
        <label>FA Title</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Programme_Type__c</fullName>
        <formula>Text( Student_Programme__r.Programme__r.Programme_Version__r.Programme_Type_External__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Uses external programme type from Programme Version</inlineHelpText>
        <label>Programme Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Referee_Address__c</fullName>
        <formula>Referee__r.MailingStreet + " " + Referee__r.MailingCity + " " +  Referee__r.MailingState + " " +  Referee__r.MailingPostalCode + " " + Referee__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Referee_Email__c</fullName>
        <formula>Referee__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Referee_Name__c</fullName>
        <formula>TEXT(Referee__r.Salutation) + " " +  Referee__r.FirstName + " " +  Referee__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full name with title (salutation)</inlineHelpText>
        <label>Referee Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Referee_Override__c</fullName>
        <formula>IF ( Student_Programme__r.Programme__r.Referee_Override__c = True, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set at programme level</inlineHelpText>
        <label>Referee Override</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Referee_Phone__c</fullName>
        <formula>Referee__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Referee_Position__c</fullName>
        <formula>Referee__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Position</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Referee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to referee Contact record</inlineHelpText>
        <label>Referee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References (Referee)</relationshipLabel>
        <relationshipName>References1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Reference_Status__c</fullName>
        <label>Reference Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student_Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Programme</label>
        <referenceTo>Student_Programme__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Test_Record__c</fullName>
        <formula>IF ( Text (Applicant__r.Test_Record__c ) = "Yes", TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Student (contact) record</inlineHelpText>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Upload_URL__c</fullName>
        <description>Note - must change domain element of URL when moving to other Orgs</description>
        <formula>HYPERLINK(
"http://lstmreference.force.com/ReferenceUpload?spid=" &amp; Student_Programme__c &amp; "&amp;rid=" &amp; Id, "Please Click Here" )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload URL</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Custom object to hold Reference information on applications</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Reference</label><nameField>
        <displayFormat>Reference-{00000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>References</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All_Test</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Applied_Programme__c</columns>
        <columns>Can_Request_Reference_from_Referee__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Referee__c</columns>
        <columns>Referee_Name__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Test_Record__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant__c</field>
            <operation>startsWith</operation>
            <value>_DUMMY_</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Test References</label>
        <sharedTo>
            <group>VLE_Admin_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>All_blanks</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Can_Request_Reference_from_Referee__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Referee__c</columns>
        <columns>Referee_Email__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Referee_Override__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant__c</field>
            <operation>notContain</operation>
            <value>_DUMMY_</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Referee__c</field>
            <operation>equals</operation>
        </filters>
        <label>X Blank References</label>
        <sharedTo>
            <group>VLE_Admin_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>All_no_Test</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Can_Request_Reference_from_Referee__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>Referee__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Referee_Override__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Applied_Programme__c</columns>
        <columns>Programme_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant__c</field>
            <operation>notContain</operation>
            <value>_DUMMY_</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Replied,Checked,Submitted</value>
        </filters>
        <label>X All Valid References</label>
    </listViews><listViews>
        <fullName>MRC_DTP_References</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Applied_Programme__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Referee__c</columns>
        <columns>Referee_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant__c</field>
            <operation>notContain</operation>
            <value>_DUMMY_</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Replied,Requested</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>9/30/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>Research Programme</value>
        </filters>
        <label>MRC-DTP References</label>
    </listViews><listViews>
        <fullName>MSc_New_References_to_Check</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Applied_Programme__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant__c</field>
            <operation>notContain</operation>
            <value>_DUMMY_</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Replied</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>MSc Programme</value>
        </filters>
        <label>MSc: New References to Check</label>
    </listViews><listViews>
        <fullName>PCU_New_Reference_to_Check</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Applied_Programme__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant__c</field>
            <operation>notContain</operation>
            <value>_DUMMY_</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Replied</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>Professional Programme,Short Course</value>
        </filters>
        <label>PCU: New Reference to Check</label>
    </listViews><listViews>
        <fullName>Research_New_References_to_Check</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Applied_Programme__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Has_Attachment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant__c</field>
            <operation>notContain</operation>
            <value>_DUMMY_</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Replied</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>Research Programme</value>
        </filters>
        <label>Research: New References to Check</label>
    </listViews></CustomObject>